# ASR-Composer

./: .gitignore  LICENSE  README.md  SPEC.md  index.html  package-lock.json  package.json  vite.config.ts
src/: docker.test.ts  docker.ts  main.test.ts  main.ts  provider-config-save.test.ts  provider-config-save.ts  providers.test.ts  providers.ts  status.test.ts  status.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/local-asr/base/: Dockerfile
src-tauri/resources/local-asr/common/: constraints-numpy126-test.txt  constraints-numpy2-test.txt  constraints-qwen3-asr.txt  diarize.py  orchestrator.py  output_writer.py  requirements-diar.txt  smoke_test.py
src-tauri/resources/local-asr/kotoba-whisper/: Dockerfile  diar_asr.py
src-tauri/resources/local-asr/qwen3-asr/: Dockerfile  diar_asr.py  requirements.txt
src-tauri/resources/local-asr/reazonspeech/: Dockerfile  pip-freeze-diar.txt  requirements-asr.txt  transcribe.py
src-tauri/src/: lib.rs  main.rs
