[package]
name = "asr-composer"
version = "0.1.0"
edition = "2021"

[lib]
name = "asr_composer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["process", "time", "io-util"] }
base64 = "0.22.1"
uuid = { version = "1", features = ["v4"] }
directories = "5"

[dev-dependencies]
tokio = { version = "1", features = ["rt"] }
